@@ -5,8 +5,9 @@
 2. Fix the bug of selector in some critical condition.
 3. Fix the bug of striping php tags.
 4. Fix the bug of remove_noise().
-5. Supports full javascript string in selector: $e->find("a[onclick=alert('hello')]").
-6. Change selector "*=" to case-insentive.
+5. Fix the bug of noise in attributes.
+6. Supports full javascript string in selector: $e->find("a[onclick=alert('hello')]").
+7. Change selector "*=" to case-insentive.
 
 
 [PHP Simple HTML DOM Parser v0.99 is released]
